--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,16 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+body::-webkit-scrollbar {
+    background-color: #403E3E;
+}
+body::-webkit-scrollbar-track {
+    background-color: #28B3B2;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #403E3E;
+}
+
 .left {
     width: 100%;
     padding: 1rem;
@@ -19,7 +29,7 @@ body {
     padding: 1rem;
 }
 
-h1, h2 {
+h1, h2, h3 {
     margin: 1rem;
     font-size: 3rem;
 }
@@ -32,6 +42,7 @@ p {
 .intro {
     margin: 0;
     justify-content: center;
+    align-items: center;
     display: flex;
     text-align: left;
 }
@@ -43,11 +54,19 @@ p {
 }
 
 ul {
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: end;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #403E3E;
+}
+
+img {
+    margin-top: 10%;
 }
 
 li {
@@ -66,14 +85,33 @@ li a:hover {
     background-color: #111;
 }
 
+.row {
+    display: flex;
+    justify-content: space-around;
+}
+
+.info {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    width: 20%;
+    border: #403E3E solid 3px;
+    border-radius: 1%;
+}
+
+.info img {
+    margin: 1%;
+    width: 70%;
+    height: 50%;
+}
+
 @media only screen and (max-width: 950px) {
     .intro {
       display: block;
     }
 
-    .left {
-        justify-content: center;
-        width: 100%;
+    .info img {
+        display: none;
     }
 
     .menu-btn-burger {
